--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Chat Messages -->
         <div class="chat-box" id="chat-box">
             <div class="message received">
-                <p>Hello! How can I assist you today?</p>
+                <p>Hello! Welcome to Nicholas lazy Chat, how can I help?</p>
             </div>
         </div>
 
